fixed spacing for adding classes on left side - home page

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 nav{
     margin-top: 2vw;
     margin-bottom: 5%;
@@ -47,6 +48,7 @@ nav a:active, a:hover{
 }
 
 body {
+    font-family: "HelveticaNeue", "Arial", sans-serif;
     padding: 0;
     margin-left: 5%;
     margin-right:5%;
